# LZW_Compression_Project

./: CMakeLists.txt  main.cpp
Media_Files/: The_Bible.lzwzip  Tortoise_and_Hare.lzwzip  Tortoise_and_Hare_Uncompressed.txt
Source_Files/: CMakeLists.txt
Source_Files/Header/: DecodeDictionary.h  EncodeDictionary.h  HashTable.h  LZWCodec.h
Source_Files/Source/: LZWCodec.cpp  Placeholder.cpp  UtilityFunctions.cpp
Test_Files/: CMakeLists.txt  DecodeDictionaryTests.cpp  EncodeDictionaryTests.cpp  HashTableTests.cpp  LZWCodecTests.cpp  combinedDictonaryTests.cpp
Test_Files/Runtime_Data/: RuntimeGraph.py
